--- a/README
+++ b/README
@@ -15,4 +15,4 @@ key: <your_redmine_api_key_here>
 where "db" is the full path to your hamster applet (SQLite 3) database, "url" is the URL of your Redmine (>= v1.1) and
 "key" is the Redmine' API key
 
-3) run the python script: ./redminetimesync.py
+3) run the python script: ./redminetimesync.py [yesterday]
